<resources>
    <string name="app_name">Beermat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>
    <string name="beer">Beer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="lottie_activity_name">Awesome Lottie Animation</string>
    <string name="lottie">Lottie</string>
    <string name="default_price">3,00</string>
    <string name="equals">=</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Becks"
    </string>
    <string name="action_settings">Settings</string>
    <string name="becks">Becks</string>
    <string name="oettinger">Oettinger</string>
    <string name="stoneipa">Stone IPA</string>
    <string name="Franziskaner">Franziskaner</string>
    <string name="krombacher">Krombacher</string>
    <string name="tannen_z_pfle">Tannen Zäpfle</string>
    <string name="lagerbier_hell">Lagerbier Hell</string>
    <string name="jever">Jever</string>
    <string name="bitburger">Bitburger</string>
    <string name="tegernseer_hell">Tegernseer Hell</string>
    <string name="flensburger_pilsener">Flensburger Pilsener</string>


</resources>
