<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        android:background="@mipmap/thin21"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/tv_beer"
            android:text="@string/beer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_beer_count"/>

    <TextView
            android:id="@+id/tv_beer_count"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button_add"/>

    <Button
            android:id="@+id/button_add"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@android:drawable/ic_input_add"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="increaseBeerCount"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button_reduce"/>

    <Button
            android:id="@+id/button_reduce"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:background="@android:drawable/ic_delete"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:onClick="reduceBeerCount"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/et_price"/>

    <EditText
            android:id="@+id/et_price"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="top"
            android:layout_marginEnd="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/tv_equals"/>

    <TextView
            android:id="@+id/tv_equals"
            android:text="@string/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_price_of_line"
            android:layout_marginEnd="9dp"/>

    <TextView
            android:id="@+id/tv_total_price_of_line"
            android:text="@string/default_price"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation_view_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/button_to_lottie_animation"
            android:text="@string/lottie"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:drawable/btn_star_big_on"
            android:onClick="onClickLottieAnimationButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>